# physfs.py

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  setup.py
.github/workflows/: conda.yml  pip.yml  wheels.yml
conda.recipe/: meta.yaml
src/: CMakeLists.txt  main.cpp  shim.cpp  shim.h
tests/: test.py
